--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,21 +1,22 @@
-# -*- coding: utf-8 -*-
-import pytest
-import requests
-from weather_cli import WeatherError, get_temp  # ① 导入 WeatherError
-
-
-def test_get_temp_beijing():
-    assert 0 <= get_temp("beijing") <= 50
-
-
-def test_get_temp_default():
-    assert 0 <= get_temp("xxx") <= 50  # 默认北京
-
-
-def test_get_temp_exception(monkeypatch):
-    def _mock_get(*a, **k):
-        raise requests.ConnectionError("network down")
-
-    monkeypatch.setattr("weather_cli.requests.get", _mock_get)
-    with pytest.raises(WeatherError, match="获取.*失败"):
-        get_temp("beijing")
+name: CI
+on: [push, pull_request]
+jobs:
+  test:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - name: Set up Python 3.12
+        uses: actions/setup-python@v5
+        with:
+          python-version: "3.12"
+      - name: Install deps
+        run: |
+          python -m pip install --upgrade pip
+          pip install -e .
+          pip install pytest coverage black isort flake8
+      - name: Run tests
+        run: pytest week1
+      - name: Run pre-commit
+        run: |
+          pip install pre-commit
+          pre-commit run --all-files
